@@ -198,6 +198,7 @@ TESTS =						\
   misc/id-context				\
   misc/id-groups				\
   misc/md5sum					\
+  misc/md5sum-bsd				\
   misc/md5sum-newline				\
   misc/md5sum-parallel				\
   misc/mknod					\
